add about uc with style

--- a/index.html
+++ b/index.html
@@ -23,18 +23,23 @@
     </header>
     <section class="fixed-width about-uc">
       <img src="img/University-of-Cebu.jpg" alt="" />
-      <p>
-        From a modest start in 1964, the Cebu College of Commerce (CCC) of old
-        has come a long way. Beginning with a handful of enrollees, what used to
-        be an undersized college has succesfully evolved into a world-class
-        university in Asia Pacific, while holding true to its philantropic
-        mantra, "NO TUITION FEE INCREASE". With forty-two (42) years of quality
-        education, the University of Cebu (UC) has been awarded a Deregulated
-        status by the Commision on Higher Education (CHED), while recognized by
-        the Philippine Association of Colleges and Universities Commision on
-        Accreditation (PACUCOA) as a learning institution with the most
-        accredited programs.
-      </p>
+      <div class="about-text">
+        <p>
+          From a modest start in 1964, the Cebu College of Commerce (CCC) of old
+          has come a long way. Beginning with a handful of enrollees, what used to
+          be an undersized college has succesfully evolved into a world-class
+          university in Asia Pacific, while holding true to its philantropic
+          mantra, "NO TUITION FEE INCREASE".
+        </p>
+        <p>
+          With forty-two (42) years of quality
+          education, the University of Cebu (UC) has been awarded a Deregulated
+          status by the Commision on Higher Education (CHED), while recognized by
+          the Philippine Association of Colleges and Universities Commision on
+          Accreditation (PACUCOA) as a learning institution with the most
+          accredited programs.
+        </p>
+      </div>
     </section>
   </body>
 </html>
