change nav and about-uc

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
     <header class="">
       <nav class="fixed-width">
-        <img src="" alt="" />
+        <img src="img/logo.png" alt="" />
         <ul>
           <li><a href="#">Profile</a></li>
           <li><a href="#">Feedback</a></li>
