--- a/index.html
+++ b/index.html
@@ -41,5 +41,21 @@
         </p>
       </div>
     </section>
+    <section class="mis-vis">
+        <div class="fixed-width container">
+          <div class="card vision">
+            <img src="img/eye.svg" alt="">
+            <p>
+              Democratize quality education. Be the visionary and industry leader. Give hope and transform lives.
+            </p>
+          </div>
+          <div class="card mission">
+            <img src="img/target.svg" alt="">
+            <p>
+              University of Cebu offers affordable and quality education responsive to the demands of local and international communities
+            </p>
+          </div>
+        </div>
+    </section>
   </body>
 </html>
