add programs section

--- a/index.html
+++ b/index.html
@@ -57,5 +57,28 @@
           </div>
         </div>
     </section>
+    <section class="fixed-width container programs">
+      <div class="card">
+        <img src="img/note-thanun-CYlPykF-qAM-unsplash.jpg" alt="">
+        <h3>Basic Education</h3>
+        <p>
+          Foundational education that offers a holistic approach of comprehensive lessons with in-depth subject-specific knowledge
+        </p>
+      </div>
+      <div class="card">
+        <img src="img/jason-goodman-vbxyFxlgpjM-unsplash.jpg" alt="">
+        <h3>Undergraduate Education</h4>
+        <p>
+          Rich learning experiences that provide a broad liberal arts foundation and deep subject-area expertise
+        </p>
+      </div>
+      <div class="card">
+        <img src="img/jud-mackrill-Of_m3hMsoAA-unsplash.jpg" alt="">
+        <h3>Graduate Education</h3>
+        <p>
+          Unsurpassed opportunities to participate in the advancement of entire fields of knowledge
+        </p>
+      </div>
+    </section>
   </body>
 </html>
