add news section

--- a/index.html
+++ b/index.html
@@ -80,5 +80,36 @@
         </p>
       </div>
     </section>
+    <section class="news">
+      <div class="fixed-width container">
+        <aside class="left">
+          <div class="card-small">
+            <img src="img/New Offering Master in Business Administration-Financial-Technology.jpg" alt="">
+            <h5>New Offering: Master in Business Administration</h5>
+          </div>
+          <div class="card-small">
+            <img src="img/University of Cebu School of Law tops.jpg" alt="">
+            <h5>University of Cebu School of Law tops Category 2 law school</h5>
+          </div>
+        </aside>
+        <div class="card-big">
+          <img src="img/College of Teacher Education of the University of Cebu.jpg" alt="">
+          <div class="news-title">
+            <h1>Molding Resilient Learners through the Magic of Reading</h1>
+            <span>Wednesday, July 12, 2023</span>
+          </div>
+        </div>
+        <aside class="right">
+          <div class="card-small">
+            <img src="img/University of Cebu School of Medicine.jpg" alt="">
+            <h5>Physician Licensure Examination</h5>
+          </div>
+          <div class="card-small">
+            <img src="img/FRIENDS National Conference on Internationalization at Home (IaH).JPG" alt="">
+            <h5>FRIENDS National Conference on Internationalization at Home (IaH)</h5>
+          </div>
+        </aside>
+      </div>
+    </section>
   </body>
 </html>
