--- a/index.html
+++ b/index.html
@@ -111,5 +111,11 @@
         </aside>
       </div>
     </section>
+    <footer>
+      <div class="fixed-width footer-text">
+        <p>Created by: Paquibot, Alexandre</p>
+        <p>December 11, 2022</p>
+      </div>
+    </footer>
   </body>
 </html>
