--- a/index.html
+++ b/index.html
@@ -8,15 +8,17 @@
   </head>
   <body>
     <header class="">
-      <nav class="fixed-width">
-        <img src="img/logo.png" alt="" />
-        <ul>
-          <li><a href="#">Profile</a></li>
-          <li><a href="#">Feedback</a></li>
-          <li><a href="#">Register</a></li>
-          <li><a href="#">Login</a></li>
-        </ul>
-      </nav>
+      <div class="nav-container">
+        <nav class="fixed-width">
+          <img src="img/logo.png" alt="" />
+          <ul>
+            <li><a href="#">Profile</a></li>
+            <li><a href="#">Feedback</a></li>
+            <li><a href="#">Register</a></li>
+            <li><a href="#">Login</a></li>
+          </ul>
+        </nav>
+      </div>
       <div class="hero-title">
         <h1>You can't spell sUCcess without UC!</h1>
       </div>
