--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
         <nav class="fixed-width">
           <img src="img/logo.png" alt="" />
           <ul>
-            <li><a href="#">Profile</a></li>
-            <li><a href="#">Feedback</a></li>
-            <li><a href="#">Register</a></li>
-            <li><a href="#">Login</a></li>
+            <li><a href="pages/profile/profile.html">Profile</a></li>
+            <li><a href="pages/feedback/feedback.html">Feedback</a></li>
+            <li><a href="pages/register/RegistrationForm_partial.html">Register</a></li>
+            <li><a href="pages/login/LOGIN.html">Login</a></li>
           </ul>
         </nav>
       </div>
