adjust programs section for button kek

--- a/index.html
+++ b/index.html
@@ -59,8 +59,8 @@
           </div>
         </div>
     </section>
-    <section class="fixed-width programs">
-      <div class="cards container">
+    <section class="fixed-width container programs">
+      <div class="cards">
         <div class="card">
           <img src="img/note-thanun-CYlPykF-qAM-unsplash.jpg" alt="">
           <h3>Basic Education</h3>
