add navbar to pages

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <header class="">
       <div class="nav-container">
         <nav class="fixed-width">
-          <img src="img/logo.png" alt="" />
+          <a href="/index.html"><img src="/img/logo.png" alt="" /></a>
           <ul>
             <li><a href="pages/profile/profile.html">Profile</a></li>
             <li><a href="pages/feedback/feedback.html">Feedback</a></li>
