--- a/pages/login/LOGIN.html
+++ b/pages/login/LOGIN.html
@@ -4,8 +4,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Login Page</title>
     <link rel="stylesheet" href="login.css" />
+    <link rel="stylesheet" href="/css/navbar.css">
   </head>
   <body>
+    <div class="nav-container">
+      <nav class="fixed-width">
+        <a href="/index.html"><img src="/img/logo.png" alt="" /></a>
+        <ul>
+          <li><a href="/pages/profile/profile.html">Profile</a></li>
+          <li><a href="/pages/feedback/feedback.html">Feedback</a></li>
+          <li>
+            <a href="/pages/register/RegistrationForm_partial.html">Register</a>
+          </li>
+          <li><a href="/pages/login/LOGIN.html">Login</a></li>
+        </ul>
+      </nav>
+    </div>
     <form>
       <div class="container">
         <div class="login-text">
