--- a/pages/profile/profile.html
+++ b/pages/profile/profile.html
@@ -5,194 +5,213 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width-device-width,initial-scale=1.0" />
     <link rel="stylesheet" href="profile.css" />
+    <link rel="stylesheet" href="../../css/navbar.css" />
   </head>
 
   <body>
+    <div class="nav-container">
+      <nav class="fixed-width">
+        <a href="/index.html"><img src="/img/logo.png" alt="" /></a>
+        <ul>
+          <li><a href="/pages/profile/profile.html">Profile</a></li>
+          <li><a href="/pages/feedback/feedback.html">Feedback</a></li>
+          <li>
+            <a href="/pages/register/RegistrationForm_partial.html">Register</a>
+          </li>
+          <li><a href="/pages/login/LOGIN.html">Login</a></li>
+        </ul>
+      </nav>
+    </div>
     <div class="people">
-        <div class="box">
-          <div class="names">
-            <img src="xandre.jpg" />
-            <h2>Alexandre Paquibot</h2>
-          </div>
-          <div class="elementsWithin1">
-            <h2>Personal Information</h2>
-            <ul>
-              <li>Address: Bagumbayan 1, Maribago, Lapu-Lapu City</li>
-              <li>Contact Number: 09231624039</li>
-              <li>Email: paquibotalexandre00@gmail.com</li>
-              <li>Birthdate: February 29,2004</li>
-            </ul>
-            <h2>Technical Skills</h2>
-            <ul>
-              <li>Linux & Windows Operating Systems</li>
-              <li>Small-scale Automation, Basic Web Development</li>
-              <li>Java, Python, HTML & CSS, Javascript, C</li>
-            </ul>
-          </div>
-          <div class="elementsWithin2">
-            <h2>Educational Background</h2>
-            <ul>
-              <li>Marigondon Elementary School(2011-2014)</li>
-              <li>Marigondon National High School(2017-2021)</li>
-              <li>University Of Cebu(2021-2023)</li>
-            </ul>
-            <h2>Recognition/Awards</h2>
-            <ul>
-              <li>Participation of Regional Schools Press Conference(2019)</li>
-              <li>Second Boy Scout of the Philippines Backyard Encampment(2018)</li>
-              <li>With High Honors(2022-2023)</li>
-              <li>With Honors(2016-2020)</li>
-            </ul>
-          </div>
+      <div class="box">
+        <div class="names">
+          <img src="xandre.jpg" />
+          <h2>Alexandre Paquibot</h2>
         </div>
-        <div class="box">
-          <div class="names">
-            <img src="ayn.jpg" />
-            <h2>Ayn Lorebelle Cavan</h2>
-          </div>
-          <div class="elementsWithin1">
-            <h2>Objectives</h2>
-            <ul>
-              <li>
-                To gain experience and broaden my skills. Confident enough to share
-                my skills to my fellow workmates and clients. I can work with less
-                supervision with high sense of initiative. Hardworking, sincere and
-                responsible to given task and willing to render overtime.
-              </li>
-            </ul>
-            <h2>Personal Information</h2>
-            <ul>
-              <li>Address: Sitio Carpo, Abuno Pajac, Lapu-Lapu City</li>
-              <li>Contact Number:09399613352</li>
-              <li>Email:02ayncavan@gmail.com</li>
-              <li>Birthdate: October 02,2004</li>
-            </ul>
-          </div>
-          <div class="elementsWithin2">
-            <h2>Educational Background</h2>
-            <ul>
-              <li>Marigondon National High School(CSS-2017-2021)</li>
-              <li>Einstein School Cebu(ICT-2021-2023)</li>
-            </ul>
-            <h2>Awards</h2>
-            <ul>
-              <li>Academic Excellence With Honors(2017-2021)</li>
-              <li>Academic Excellence With Honors(2021-2023)</li>
-            </ul>
-          </div>
+        <div class="elementsWithin1">
+          <h2>Personal Information</h2>
+          <ul>
+            <li>Address: Bagumbayan 1, Maribago, Lapu-Lapu City</li>
+            <li>Contact Number: 09231624039</li>
+            <li>Email: paquibotalexandre00@gmail.com</li>
+            <li>Birthdate: February 29,2004</li>
+          </ul>
+          <h2>Technical Skills</h2>
+          <ul>
+            <li>Linux & Windows Operating Systems</li>
+            <li>Small-scale Automation, Basic Web Development</li>
+            <li>Java, Python, HTML & CSS, Javascript, C</li>
+          </ul>
         </div>
-        <div class="box">
-          <div class="names">
-            <img src="David.jpg" />
-            <h2>Jan David Capuyan</h2>
-          </div>
-          <div class="elementsWithin1">
-            <h2>Objectives</h2>
-            <ul>
-              <li>
-                To build a professional career by working with motivated and
-                dedicated people in a very competitive and structured organizational
-                environment.
-              </li>
-            </ul>
-            <h2>Personal Information</h2>
-            <ul>
-              <li>Address: Pajo, Seaside, Lapu-Lapu City</li>
-              <li>Email: ezdavidz789@gmail.com</li>
-              <li>Contact Number: 0966577061</li>
-            </ul>
-          </div>
-          <div class="elementsWithin2">
-            <h2>Educational Background</h2>
-            <ul>
-              <li>Pajo Elementary School</li>
-              <li>Pajo National High School</li>
-              <li>University Of Cebu Lapu-Lapu and Mandaue</li>
-            </ul>
-            <h2>Skills</h2>
-            <ul>
-              <li>UI/UX</li>
-              <li>Visual Design</li>
-              <li>Wireframes</li>
-              <li>Storyboards</li>
-              <li>User Flows</li>
-              <li>Process Flows</li>
-            </ul>
-          </div>
+        <div class="elementsWithin2">
+          <h2>Educational Background</h2>
+          <ul>
+            <li>Marigondon Elementary School(2011-2014)</li>
+            <li>Marigondon National High School(2017-2021)</li>
+            <li>University Of Cebu(2021-2023)</li>
+          </ul>
+          <h2>Recognition/Awards</h2>
+          <ul>
+            <li>Participation of Regional Schools Press Conference(2019)</li>
+            <li>
+              Second Boy Scout of the Philippines Backyard Encampment(2018)
+            </li>
+            <li>With High Honors(2022-2023)</li>
+            <li>With Honors(2016-2020)</li>
+          </ul>
         </div>
-        <div class="box">
-          <div class="names">
-            <img src="erika.jpg" />
-            <h2>Erika Gabrielle Samson</h2>
-          </div>
-          <div class="elementsWithin1">
-            <h2>Personal Information</h2>
-            <ul>
-              <li>Address: Gun-ob, Vican, Lapu-Lapu City</li>
-              <li>Contact Number: 09620676531</li>
-              <li>Email: kaisamson.uc@gmail.com</li>
-              <li>Birthdate: April 14,2004</li>
-            </ul>
-            <h2>Special Skills</h2>
-            <ul>
-              <li>Ability to work with a team</li>
-              <li>Communication Skills</li>
-              <li>Leadership Experience</li>
-            </ul>
-          </div>
-          <div class="elementsWithin2">
-            <h2>Educational Background</h2>
-            <ul>
-              <li>Advance Institute of Technology Inc.(2011-2016)</li>
-              <li>Advance Institute of Technology Inc.(2017-2020)</li>
-              <li>University of Cebu Lapu-Lapu and Mandaue(2021-2023)</li>
-            </ul>
-            <h2>Recognition / Awards</h2>
-            <ul>
-              <li>Cadet 1st Lieutenant of Class Bagsik</li>
-              <li>ACP(Aerospace Cadet of the Philippines) (Wing Commander 2018)</li>
-              <li>3rd Honorable Mention(Year 2016)</li>
-              <li>Best in Computer</li>
-              <li>Academic Excellence with Honors</li>
-              <li>Service Award</li>
-            </ul>
-          </div>
+      </div>
+      <div class="box">
+        <div class="names">
+          <img src="ayn.jpg" />
+          <h2>Ayn Lorebelle Cavan</h2>
         </div>
-        <div class="box">
-          <div class="names">
-            <img src="unknown.jpg" />
-            <h2>Princess Abegeal Alegre</h2>
-          </div>
-          <div class="elementsWithin1">
-            <h2>Objectives</h2>
-            <ul>
-              <li>To develop my own website</li>
-              <li>To be a good in web designer</li>
-              <li>To be a successful programmer</li>
-            </ul>
-            <h2>Personal Information</h2>
-            <ul>
-              <li>Birth date: March 12, 2005</li>
-              <li>Age: 18</li>
-              <li>Civil Status: Single</li>
-              <li>Religion: Roman Catholic</li>
-            </ul>
-          </div>
-          <div class="elementsWithin2">
-            <h2>Educational Background</h2>
-            <ul>
-              <li>Santiago Elementary School</li>
-              <li>Santiago National High School</li>
-              <li>Einstein School Cebu</li>
-            </ul>
-            <h2>Skills</h2>
-            <ul>
-              <li>Planning</li>
-              <li>Organizational Skills</li>
-              <li>I can do basic programs</li>
-            </ul>
-          </div>
+        <div class="elementsWithin1">
+          <h2>Objectives</h2>
+          <ul>
+            <li>
+              To gain experience and broaden my skills. Confident enough to
+              share my skills to my fellow workmates and clients. I can work
+              with less supervision with high sense of initiative. Hardworking,
+              sincere and responsible to given task and willing to render
+              overtime.
+            </li>
+          </ul>
+          <h2>Personal Information</h2>
+          <ul>
+            <li>Address: Sitio Carpo, Abuno Pajac, Lapu-Lapu City</li>
+            <li>Contact Number:09399613352</li>
+            <li>Email:02ayncavan@gmail.com</li>
+            <li>Birthdate: October 02,2004</li>
+          </ul>
         </div>
+        <div class="elementsWithin2">
+          <h2>Educational Background</h2>
+          <ul>
+            <li>Marigondon National High School(CSS-2017-2021)</li>
+            <li>Einstein School Cebu(ICT-2021-2023)</li>
+          </ul>
+          <h2>Awards</h2>
+          <ul>
+            <li>Academic Excellence With Honors(2017-2021)</li>
+            <li>Academic Excellence With Honors(2021-2023)</li>
+          </ul>
+        </div>
+      </div>
+      <div class="box">
+        <div class="names">
+          <img src="David.jpg" />
+          <h2>Jan David Capuyan</h2>
+        </div>
+        <div class="elementsWithin1">
+          <h2>Objectives</h2>
+          <ul>
+            <li>
+              To build a professional career by working with motivated and
+              dedicated people in a very competitive and structured
+              organizational environment.
+            </li>
+          </ul>
+          <h2>Personal Information</h2>
+          <ul>
+            <li>Address: Pajo, Seaside, Lapu-Lapu City</li>
+            <li>Email: ezdavidz789@gmail.com</li>
+            <li>Contact Number: 0966577061</li>
+          </ul>
+        </div>
+        <div class="elementsWithin2">
+          <h2>Educational Background</h2>
+          <ul>
+            <li>Pajo Elementary School</li>
+            <li>Pajo National High School</li>
+            <li>University Of Cebu Lapu-Lapu and Mandaue</li>
+          </ul>
+          <h2>Skills</h2>
+          <ul>
+            <li>UI/UX</li>
+            <li>Visual Design</li>
+            <li>Wireframes</li>
+            <li>Storyboards</li>
+            <li>User Flows</li>
+            <li>Process Flows</li>
+          </ul>
+        </div>
+      </div>
+      <div class="box">
+        <div class="names">
+          <img src="erika.jpg" />
+          <h2>Erika Gabrielle Samson</h2>
+        </div>
+        <div class="elementsWithin1">
+          <h2>Personal Information</h2>
+          <ul>
+            <li>Address: Gun-ob, Vican, Lapu-Lapu City</li>
+            <li>Contact Number: 09620676531</li>
+            <li>Email: kaisamson.uc@gmail.com</li>
+            <li>Birthdate: April 14,2004</li>
+          </ul>
+          <h2>Special Skills</h2>
+          <ul>
+            <li>Ability to work with a team</li>
+            <li>Communication Skills</li>
+            <li>Leadership Experience</li>
+          </ul>
+        </div>
+        <div class="elementsWithin2">
+          <h2>Educational Background</h2>
+          <ul>
+            <li>Advance Institute of Technology Inc.(2011-2016)</li>
+            <li>Advance Institute of Technology Inc.(2017-2020)</li>
+            <li>University of Cebu Lapu-Lapu and Mandaue(2021-2023)</li>
+          </ul>
+          <h2>Recognition / Awards</h2>
+          <ul>
+            <li>Cadet 1st Lieutenant of Class Bagsik</li>
+            <li>
+              ACP(Aerospace Cadet of the Philippines) (Wing Commander 2018)
+            </li>
+            <li>3rd Honorable Mention(Year 2016)</li>
+            <li>Best in Computer</li>
+            <li>Academic Excellence with Honors</li>
+            <li>Service Award</li>
+          </ul>
+        </div>
+      </div>
+      <div class="box">
+        <div class="names">
+          <img src="unknown.jpg" />
+          <h2>Princess Abegeal Alegre</h2>
+        </div>
+        <div class="elementsWithin1">
+          <h2>Objectives</h2>
+          <ul>
+            <li>To develop my own website</li>
+            <li>To be a good in web designer</li>
+            <li>To be a successful programmer</li>
+          </ul>
+          <h2>Personal Information</h2>
+          <ul>
+            <li>Birth date: March 12, 2005</li>
+            <li>Age: 18</li>
+            <li>Civil Status: Single</li>
+            <li>Religion: Roman Catholic</li>
+          </ul>
+        </div>
+        <div class="elementsWithin2">
+          <h2>Educational Background</h2>
+          <ul>
+            <li>Santiago Elementary School</li>
+            <li>Santiago National High School</li>
+            <li>Einstein School Cebu</li>
+          </ul>
+          <h2>Skills</h2>
+          <ul>
+            <li>Planning</li>
+            <li>Organizational Skills</li>
+            <li>I can do basic programs</li>
+          </ul>
+        </div>
+      </div>
     </div>
   </body>
 </html>
