--- a/pages/register/RegistrationForm_partial.html
+++ b/pages/register/RegistrationForm_partial.html
@@ -5,7 +5,10 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap">
+  <link rel="stylesheet" href="/css/navbar.css">
   <style>
+    @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap');
+
     body {
       margin: 0;
       padding: 0;
@@ -106,6 +109,19 @@
   
 </head>
 <body>
+  <div class="nav-container">
+    <nav class="fixed-width">
+      <a href="/index.html"><img src="/img/logo.png" alt="" /></a>
+      <ul>
+        <li><a href="/pages/profile/profile.html">Profile</a></li>
+        <li><a href="/pages/feedback/feedback.html">Feedback</a></li>
+        <li>
+          <a href="/pages/register/RegistrationForm_partial.html">Register</a>
+        </li>
+        <li><a href="/pages/login/LOGIN.html">Login</a></li>
+      </ul>
+    </nav>
+  </div>
   <form id="registrationForm">
     <h2>REGISTRATION FORM</h2>
     <label for="firstName">First Name</label>
