--- a/pages/feedback/feedback.html
+++ b/pages/feedback/feedback.html
@@ -105,11 +105,10 @@
       <nav class="fixed-width">
         <a href="/index.html"><img src="/img/logo.png" alt="" /></a>
         <ul>
+          <li><a href="/index.html">Home</a></li>
           <li><a href="/pages/profile/profile.html">Profile</a></li>
           <li><a href="/pages/feedback/feedback.html">Feedback</a></li>
-          <li>
-            <a href="/pages/register/RegistrationForm_partial.html">Register</a>
-          </li>
+          <li><a href="/pages/register/RegistrationForm_partial.html">Register</a></li>
           <li><a href="/pages/login/LOGIN.html">Login</a></li>
         </ul>
       </nav>
