--- a/pages/login/LOGIN.html
+++ b/pages/login/LOGIN.html
@@ -3,7 +3,7 @@
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Login Page</title>
-    <link rel="stylesheet" href="login.css" />
+    <link rel="stylesheet" href="/css/login.css" />
     <link rel="stylesheet" href="/css/navbar.css">
   </head>
   <body>
@@ -36,13 +36,13 @@
         <input
           type="password"
           name="password"
-          id="password"
+          id="pword"
           required
         />
         <button type="submit">Login</button>
         <div class="forgot">FORGOT <a href="#">PASSCODE?</a></div>
       </div>
     </form>
-    <script src="LOGIN.js" type="text/javascript"></script>
+    <script src="/js/login.js" type="text/javascript"></script>
   </body>
 </html>
