profile page file mgmt

--- a/pages/profile/profile.html
+++ b/pages/profile/profile.html
@@ -4,8 +4,8 @@
     <title>PROFILE</title>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width-device-width,initial-scale=1.0" />
-    <link rel="stylesheet" href="profile.css" />
-    <link rel="stylesheet" href="../../css/navbar.css" />
+    <link rel="stylesheet" href="/css/navbar.css" />
+    <link rel="stylesheet" href="/css/profile.css" />
   </head>
 
   <body>
@@ -24,7 +24,7 @@
     <div class="people">
       <div class="box">
         <div class="names">
-          <img src="xandre.jpg" />
+          <img src="/img/xandre.jpg" />
           <h2>Alexandre Paquibot</h2>
         </div>
         <div class="elementsWithin1">
@@ -62,7 +62,7 @@
       </div>
       <div class="box">
         <div class="names">
-          <img src="ayn.jpg" />
+          <img src="/img/ayn.jpg" />
           <h2>Ayn Lorebelle Cavan</h2>
         </div>
         <div class="elementsWithin1">
@@ -99,7 +99,7 @@
       </div>
       <div class="box">
         <div class="names">
-          <img src="David.jpg" />
+          <img src="/img/David.jpg" />
           <h2>Jan David Capuyan</h2>
         </div>
         <div class="elementsWithin1">
@@ -138,7 +138,7 @@
       </div>
       <div class="box">
         <div class="names">
-          <img src="erika.jpg" />
+          <img src="/img/erika.jpg" />
           <h2>Erika Gabrielle Samson</h2>
         </div>
         <div class="elementsWithin1">
@@ -178,7 +178,7 @@
       </div>
       <div class="box">
         <div class="names">
-          <img src="unknown.jpg" />
+          <img src="/img/unknown.jpg" />
           <h2>Princess Abegeal Alegre</h2>
         </div>
         <div class="elementsWithin1">
