--- a/pages/register/register.html
+++ b/pages/register/register.html
@@ -24,7 +24,7 @@
       </nav>
     </div>
     <form id="registrationForm">
-      <h2>REGISTRATION FORM</h2>
+      <h1>Registration Form</h1>
       <label for="firstName">First Name</label>
       <input type="text" id="firstName" required />
 
