adjust login style

--- a/pages/login/LOGIN.html
+++ b/pages/login/LOGIN.html
@@ -25,22 +25,24 @@
           <h1>Student Login Form</h1>
           <h2>Login now to your account!</h2>
         </div>
-        <label for="username">Username</label>
-        <input
-          type="text"
-          name="username"
-          id="username"
-          required
-        />
-        <label for="password">Password</label>
-        <input
-          type="password"
-          name="password"
-          id="pword"
-          required
-        />
-        <button type="submit">Login</button>
-        <div class="forgot">FORGOT <a href="#">PASSCODE?</a></div>
+        <div class="inputs">
+          <label for="username">Username</label>
+          <input
+            type="text"
+            name="username"
+            id="username"
+            required
+          />
+          <label for="password">Password</label>
+          <input
+            type="password"
+            name="password"
+            id="pword"
+            required
+          />
+          <button type="submit">Login</button>
+          <div class="forgot">FORGOT <a href="#">PASSCODE?</a></div>
+        </div>
       </div>
     </form>
     <script src="/js/login.js" type="text/javascript"></script>
