--- a/pages/login/LOGIN.html
+++ b/pages/login/LOGIN.html
@@ -4,7 +4,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Login</title>
     <link rel="stylesheet" href="/css/login.css" />
-    <link rel="stylesheet" href="/css/navbar.css">
+    <link rel="stylesheet" href="/css/navbar.css" />
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
+    <link rel="manifest" href="/site.webmanifest" />
   </head>
   <body>
     <div class="nav-container">
@@ -27,19 +31,9 @@
         </div>
         <div class="inputs">
           <label for="username">Username</label>
-          <input
-            type="text"
-            name="username"
-            id="username"
-            required
-          />
+          <input type="text" name="username" id="username" required />
           <label for="password">Password</label>
-          <input
-            type="password"
-            name="password"
-            id="pword"
-            required
-          />
+          <input type="password" name="password" id="pword" required />
           <button type="submit">Login</button>
           <div class="forgot">FORGOT <a href="#">PASSCODE?</a></div>
         </div>
