--- a/pages/profile/profile.html
+++ b/pages/profile/profile.html
@@ -6,6 +6,10 @@
     <meta name="viewport" content="width-device-width,initial-scale=1.0" />
     <link rel="stylesheet" href="/css/navbar.css" />
     <link rel="stylesheet" href="/css/profile.css" />
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
+    <link rel="manifest" href="/site.webmanifest" />
   </head>
 
   <body>
@@ -16,7 +20,9 @@
           <li><a href="/index.html">Home</a></li>
           <li><a href="/pages/profile/profile.html">Profile</a></li>
           <li><a href="/pages/feedback/feedback.html">Feedback</a></li>
-          <li><a href="/pages/register/RegistrationForm_partial.html">Register</a></li>
+          <li>
+            <a href="/pages/register/RegistrationForm_partial.html">Register</a>
+          </li>
           <li><a href="/pages/login/login.html">Login</a></li>
         </ul>
       </nav>
