--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Welcome to University of Cebu</title>
     <link rel="stylesheet" href="./css/style.css" />
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
+    <link rel="manifest" href="/site.webmanifest" />
   </head>
   <body>
     <header class="">
@@ -29,58 +33,62 @@
       <div class="about-text">
         <p>
           From a modest start in 1964, the Cebu College of Commerce (CCC) of old
-          has come a long way. Beginning with a handful of enrollees, what used to
-          be an undersized college has succesfully evolved into a world-class
+          has come a long way. Beginning with a handful of enrollees, what used
+          to be an undersized college has succesfully evolved into a world-class
           university in Asia Pacific, while holding true to its philantropic
           mantra, "NO TUITION FEE INCREASE".
         </p>
         <p>
-          With forty-two (42) years of quality
-          education, the University of Cebu (UC) has been awarded a Deregulated
-          status by the Commision on Higher Education (CHED), while recognized by
-          the Philippine Association of Colleges and Universities Commision on
-          Accreditation (PACUCOA) as a learning institution with the most
-          accredited programs.
+          With forty-two (42) years of quality education, the University of Cebu
+          (UC) has been awarded a Deregulated status by the Commision on Higher
+          Education (CHED), while recognized by the Philippine Association of
+          Colleges and Universities Commision on Accreditation (PACUCOA) as a
+          learning institution with the most accredited programs.
         </p>
       </div>
     </section>
     <section class="mis-vis">
-        <div class="fixed-width container">
-          <div class="card vision">
-            <img src="img/eye.svg" alt="">
-            <p>
-              Democratize quality education. Be the visionary and industry leader. Give hope and transform lives.
-            </p>
-          </div>
-          <div class="card mission">
-            <img src="img/target.svg" alt="">
-            <p>
-              University of Cebu offers affordable and quality education responsive to the demands of local and international communities
-            </p>
-          </div>
+      <div class="fixed-width container">
+        <div class="card vision">
+          <img src="img/eye.svg" alt="" />
+          <p>
+            Democratize quality education. Be the visionary and industry leader.
+            Give hope and transform lives.
+          </p>
         </div>
+        <div class="card mission">
+          <img src="img/target.svg" alt="" />
+          <p>
+            University of Cebu offers affordable and quality education
+            responsive to the demands of local and international communities
+          </p>
+        </div>
+      </div>
     </section>
     <section class="fixed-width container programs">
       <div class="cards">
         <div class="card">
-          <img src="img/note-thanun-CYlPykF-qAM-unsplash.jpg" alt="">
+          <img src="img/note-thanun-CYlPykF-qAM-unsplash.jpg" alt="" />
           <h3>Basic Education</h3>
           <p>
-            Foundational education that offers a holistic approach of comprehensive lessons with in-depth subject-specific knowledge
+            Foundational education that offers a holistic approach of
+            comprehensive lessons with in-depth subject-specific knowledge
           </p>
         </div>
         <div class="card">
-          <img src="img/jason-goodman-vbxyFxlgpjM-unsplash.jpg" alt="">
-          <h3>Undergraduate Education</h4>
+          <img src="img/jason-goodman-vbxyFxlgpjM-unsplash.jpg" alt="" />
+          <h3>Undergraduate Education</h3>
           <p>
-            Rich learning experiences that provide a broad liberal arts foundation and deep subject-area expertise
+            Rich learning experiences that provide a broad liberal arts
+            foundation and deep subject-area expertise
           </p>
         </div>
         <div class="card">
-          <img src="img/jud-mackrill-Of_m3hMsoAA-unsplash.jpg" alt="">
+          <img src="img/jud-mackrill-Of_m3hMsoAA-unsplash.jpg" alt="" />
           <h3>Graduate Education</h3>
           <p>
-            Unsurpassed opportunities to participate in the advancement of entire fields of knowledge
+            Unsurpassed opportunities to participate in the advancement of
+            entire fields of knowledge
           </p>
         </div>
       </div>
@@ -90,16 +98,22 @@
       <div class="fixed-width container">
         <aside class="left">
           <div class="card-small">
-            <img src="img/New Offering Master in Business Administration-Financial-Technology.jpg" alt="">
+            <img
+              src="img/New Offering Master in Business Administration-Financial-Technology.jpg"
+              alt=""
+            />
             <h5>New Offering: Master in Business Administration</h5>
           </div>
           <div class="card-small">
-            <img src="img/University of Cebu School of Law tops.jpg" alt="">
+            <img src="img/University of Cebu School of Law tops.jpg" alt="" />
             <h5>University of Cebu School of Law tops Category 2 law school</h5>
           </div>
         </aside>
         <div class="card-big">
-          <img src="img/College of Teacher Education of the University of Cebu.jpg" alt="">
+          <img
+            src="img/College of Teacher Education of the University of Cebu.jpg"
+            alt=""
+          />
           <div class="news-title">
             <h1>Molding Resilient Learners through the Magic of Reading</h1>
             <span>Wednesday, July 12, 2023</span>
@@ -107,12 +121,17 @@
         </div>
         <aside class="right">
           <div class="card-small">
-            <img src="img/University of Cebu School of Medicine.jpg" alt="">
+            <img src="img/University of Cebu School of Medicine.jpg" alt="" />
             <h5>Physician Licensure Examination</h5>
           </div>
           <div class="card-small">
-            <img src="img/FRIENDS National Conference on Internationalization at Home (IaH).JPG" alt="">
-            <h5>FRIENDS National Conference on Internationalization at Home (IaH)</h5>
+            <img
+              src="img/FRIENDS National Conference on Internationalization at Home (IaH).JPG"
+              alt=""
+            />
+            <h5>
+              FRIENDS National Conference on Internationalization at Home (IaH)
+            </h5>
           </div>
         </aside>
       </div>
