--- a/pages/register/register.html
+++ b/pages/register/register.html
@@ -10,6 +10,10 @@
     <link rel="stylesheet" href="/css/navbar.css" />
     <link rel="stylesheet" href="/css/register.css" />
     <title>Register</title>
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
+    <link rel="manifest" href="/site.webmanifest" />
   </head>
   <body>
     <div class="nav-container">
@@ -47,6 +51,6 @@
 
       <button type="submit">Register</button>
     </form>
-  <script src="/js/register.js"></script>
+    <script src="/js/register.js"></script>
   </body>
 </html>
