--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
     <section class="fixed-width container programs">
       <div class="cards">
         <div class="card">
-          <img src="img/note-thanun-CYlPykF-qAM-unsplash.jpg" alt="" />
+          <img src="img/note-thanun-CYlPykF-qAM-unsplash (Small).jpg" alt="" />
           <h3>Basic Education</h3>
           <p>
             Foundational education that offers a holistic approach of
@@ -76,7 +76,7 @@
           </p>
         </div>
         <div class="card">
-          <img src="img/jason-goodman-vbxyFxlgpjM-unsplash.jpg" alt="" />
+          <img src="img/jason-goodman-vbxyFxlgpjM-unsplash (Small).jpg" alt="" />
           <h3>Undergraduate Education</h3>
           <p>
             Rich learning experiences that provide a broad liberal arts
@@ -84,7 +84,7 @@
           </p>
         </div>
         <div class="card">
-          <img src="img/jud-mackrill-Of_m3hMsoAA-unsplash.jpg" alt="" />
+          <img src="img/jud-mackrill-Of_m3hMsoAA-unsplash (Small).jpg" alt="" />
           <h3>Graduate Education</h3>
           <p>
             Unsurpassed opportunities to participate in the advancement of
