add footer to all pages

--- a/pages/register/register.html
+++ b/pages/register/register.html
@@ -9,6 +9,7 @@
     />
     <link rel="stylesheet" href="/css/navbar.css" />
     <link rel="stylesheet" href="/css/register.css" />
+    <link rel="stylesheet" href="/css/footer.css">
     <title>Register</title>
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
@@ -52,5 +53,11 @@
       <button type="submit">Register</button>
     </form>
     <script src="/js/register.js"></script>
+    <footer>
+      <div class="fixed-width footer-text">
+        <p>Created by: Samson, Erika Gabrielle</p>
+        <p>December 11, 2022</p>
+      </div>
+    </footer>
   </body>
 </html>
