--- a/pages/feedback/feedback.html
+++ b/pages/feedback/feedback.html
@@ -10,6 +10,7 @@
     ></script>
     <link rel="stylesheet" href="/css/navbar.css" />
     <link rel="stylesheet" href="/css/feedback.css" />
+    <link rel="stylesheet" href="/css/footer.css">
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
@@ -47,5 +48,11 @@
         <button>Send</button>
       </form>
     </div>
+    <footer>
+      <div class="fixed-width footer-text">
+        <p>Created by: Capuyan, Jan David</p>
+        <p>December 11, 2022</p>
+      </div>
+    </footer>
   </body>
 </html>
