--- a/pages/login/LOGIN.html
+++ b/pages/login/LOGIN.html
@@ -5,6 +5,7 @@
     <title>Login</title>
     <link rel="stylesheet" href="/css/login.css" />
     <link rel="stylesheet" href="/css/navbar.css" />
+    <link rel="stylesheet" href="/css/footer.css">
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
@@ -39,6 +40,12 @@
         </div>
       </div>
     </form>
+    <footer>
+      <div class="fixed-width footer-text">
+        <p>Created by: Cavan, Ayn Lorebelle</p>
+        <p>December 11, 2022</p>
+      </div>
+    </footer>
     <script src="/js/login.js" type="text/javascript"></script>
   </body>
 </html>
