--- a/pages/profile/profile.html
+++ b/pages/profile/profile.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width-device-width,initial-scale=1.0" />
     <link rel="stylesheet" href="/css/navbar.css" />
     <link rel="stylesheet" href="/css/profile.css" />
+    <link rel="stylesheet" href="/css/footer.css">
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
@@ -218,5 +219,11 @@
         </div>
       </div>
     </div>
+    <footer>
+      <div class="fixed-width footer-text">
+        <p>Created by: Alegre, Princess Abegeal</p>
+        <p>December 11, 2022</p>
+      </div>
+    </footer>
   </body>
 </html>
