i fucking hate this piece of shit

--- a/index.html
+++ b/index.html
@@ -4,23 +4,23 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Welcome to University of Cebu</title>
-    <link rel="stylesheet" href="/css/style.css" />
-    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
-    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
-    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
-    <link rel="manifest" href="/site.webmanifest" />
+    <link rel="stylesheet" href="./css/style.css" />
+    <link rel="apple-touch-icon" sizes="180x180" href="./apple-touch-icon.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="./favicon-32x32.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="./favicon-16x16.png" />
+    <link rel="manifest" href="./site.webmanifest" />
   </head>
   <body>
     <header class="">
       <div class="nav-container">
         <nav class="fixed-width">
-          <a href="/index.html"><img src="/img/logo.png" alt="" /></a>
+          <a href="./index.html"><img src="./img/logo.png" alt="" /></a>
           <ul>
-            <li><a href="/index.html">Home</a></li>
-            <li><a href="/pages/profile/profile.html">Profile</a></li>
-            <li><a href="/pages/feedback/feedback.html">Feedback</a></li>
-            <li><a href="/pages/register/register.html">Register</a></li>
-            <li><a href="/pages/login/login.html">Login</a></li>
+            <li><a href="./index.html">Home</a></li>
+            <li><a href="./pages/profile/profile.html">Profile</a></li>
+            <li><a href="./pages/feedback/feedback.html">Feedback</a></li>
+            <li><a href="./pages/register/register.html">Register</a></li>
+            <li><a href="./pages/login/login.html">Login</a></li>
           </ul>
         </nav>
       </div>
@@ -29,7 +29,7 @@
       </div>
     </header>
     <section class="fixed-width about-uc">
-      <img src="/img/University-of-Cebu.jpg" alt="" />
+      <img src="./img/University-of-Cebu.jpg" alt="" />
       <div class="about-text">
         <p>
           From a modest start in 1964, the Cebu College of Commerce (CCC) of old
@@ -50,14 +50,14 @@
     <section class="mis-vis">
       <div class="fixed-width container">
         <div class="card vision">
-          <img src="/img/eye.svg" alt="" />
+          <img src="./img/eye.svg" alt="" />
           <p>
             Democratize quality education. Be the visionary and industry leader.
             Give hope and transform lives.
           </p>
         </div>
         <div class="card mission">
-          <img src="/img/target.svg" alt="" />
+          <img src="./img/target.svg" alt="" />
           <p>
             University of Cebu offers affordable and quality education
             responsive to the demands of local and international communities
@@ -68,7 +68,7 @@
     <section class="fixed-width container programs">
       <div class="cards">
         <div class="card">
-          <img src="/img/note-thanun-CYlPykF-qAM-unsplash (Small).jpg" alt="" />
+          <img src="./img/note-thanun-CYlPykF-qAM-unsplash (Small).jpg" alt="" />
           <h3>Basic Education</h3>
           <p>
             Foundational education that offers a holistic approach of
@@ -76,7 +76,7 @@
           </p>
         </div>
         <div class="card">
-          <img src="/img/jason-goodman-vbxyFxlgpjM-unsplash (Small).jpg" alt="" />
+          <img src="./img/jason-goodman-vbxyFxlgpjM-unsplash (Small).jpg" alt="" />
           <h3>Undergraduate Education</h3>
           <p>
             Rich learning experiences that provide a broad liberal arts
@@ -84,7 +84,7 @@
           </p>
         </div>
         <div class="card">
-          <img src="/img/jud-mackrill-Of_m3hMsoAA-unsplash (Small).jpg" alt="" />
+          <img src="./img/jud-mackrill-Of_m3hMsoAA-unsplash (Small).jpg" alt="" />
           <h3>Graduate Education</h3>
           <p>
             Unsurpassed opportunities to participate in the advancement of
@@ -99,19 +99,19 @@
         <aside class="left">
           <div class="card-small">
             <img
-              src="/img/New Offering Master in Business Administration-Financial-Technology.jpg"
+              src="./img/New Offering Master in Business Administration-Financial-Technology.jpg"
               alt=""
             />
             <h5>New Offering: Master in Business Administration</h5>
           </div>
           <div class="card-small">
-            <img src="/img/University of Cebu School of Law tops.jpg" alt="" />
+            <img src="./img/University of Cebu School of Law tops.jpg" alt="" />
             <h5>University of Cebu School of Law tops Category 2 law school</h5>
           </div>
         </aside>
         <div class="card-big">
           <img
-            src="/img/College of Teacher Education of the University of Cebu.jpg"
+            src="./img/College of Teacher Education of the University of Cebu.jpg"
             alt=""
           />
           <div class="news-title">
@@ -121,12 +121,12 @@
         </div>
         <aside class="right">
           <div class="card-small">
-            <img src="/img/University of Cebu School of Medicine.jpg" alt="" />
+            <img src="./img/University of Cebu School of Medicine.jpg" alt="" />
             <h5>Physician Licensure Examination</h5>
           </div>
           <div class="card-small">
             <img
-              src="/img/FRIENDS National Conference on Internationalization at Home (IaH).JPG"
+              src="./img/FRIENDS National Conference on Internationalization at Home (IaH).JPG"
               alt=""
             />
             <h5>
