--- a/pages/feedback/feedback.html
+++ b/pages/feedback/feedback.html
@@ -8,24 +8,24 @@
       src="https://kit.fontawesome.com/2d275883fd.js"
       crossorigin="anonymous"
     ></script>
-    <link rel="stylesheet" href="/css/navbar.css" />
-    <link rel="stylesheet" href="/css/feedback.css" />
-    <link rel="stylesheet" href="/css/footer.css">
-    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
-    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
-    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
-    <link rel="manifest" href="/site.webmanifest" />
+    <link rel="stylesheet" href="../../css/navbar.css" />
+    <link rel="stylesheet" href="../../css/feedback.css" />
+    <link rel="stylesheet" href="../../css/footer.css">
+    <link rel="apple-touch-icon" sizes="180x180" href="../../apple-touch-icon.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="../../favicon-32x32.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="../../favicon-16x16.png" />
+    <link rel="manifest" href="../../site.webmanifest" />
   </head>
   <body>
     <div class="nav-container">
       <nav class="fixed-width">
-        <a href="/index.html"><img src="/img/logo.png" alt="" /></a>
+        <a href="../../index.html"><img src="../../img/logo.png" alt="" /></a>
         <ul>
-          <li><a href="/index.html">Home</a></li>
-          <li><a href="/pages/profile/profile.html">Profile</a></li>
-          <li><a href="/pages/feedback/feedback.html">Feedback</a></li>
-          <li><a href="/pages/register/register.html">Register</a></li>
-          <li><a href="/pages/login/login.html">Login</a></li>
+          <li><a href="../../index.html">Home</a></li>
+          <li><a href="../../pages/profile/profile.html">Profile</a></li>
+          <li><a href="../../pages/feedback/feedback.html">Feedback</a></li>
+          <li><a href="../../pages/register/register.html">Register</a></li>
+          <li><a href="../../pages/login/login.html">Login</a></li>
         </ul>
       </nav>
     </div>
