--- a/pages/profile/profile.html
+++ b/pages/profile/profile.html
@@ -4,27 +4,27 @@
     <title>Profiles | Behind the Scenes</title>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width-device-width,initial-scale=1.0" />
-    <link rel="stylesheet" href="/css/navbar.css" />
-    <link rel="stylesheet" href="/css/profile.css" />
-    <link rel="stylesheet" href="/css/footer.css">
-    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
-    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
-    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
-    <link rel="manifest" href="/site.webmanifest" />
+    <link rel="stylesheet" href="../../css/navbar.css" />
+    <link rel="stylesheet" href="../../css/profile.css" />
+    <link rel="stylesheet" href="../../css/footer.css">
+    <link rel="apple-touch-icon" sizes="180x180" href="../../apple-touch-icon.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="../../favicon-32x32.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="../../favicon-16x16.png" />
+    <link rel="manifest" href="../../site.webmanifest" />
   </head>
 
   <body>
     <div class="nav-container">
       <nav class="fixed-width">
-        <a href="/index.html"><img src="/img/logo.png" alt="" /></a>
+        <a href="../../index.html"><img src="../../img/logo.png" alt="" /></a>
         <ul>
-          <li><a href="/index.html">Home</a></li>
-          <li><a href="/pages/profile/profile.html">Profile</a></li>
-          <li><a href="/pages/feedback/feedback.html">Feedback</a></li>
+          <li><a href="../../index.html">Home</a></li>
+          <li><a href="../../pages/profile/profile.html">Profile</a></li>
+          <li><a href="../../pages/feedback/feedback.html">Feedback</a></li>
           <li>
-            <a href="/pages/register/register.html">Register</a>
+            <a href="../../pages/register/register.html">Register</a>
           </li>
-          <li><a href="/pages/login/login.html">Login</a></li>
+          <li><a href="../../pages/login/login.html">Login</a></li>
         </ul>
       </nav>
     </div>
@@ -34,7 +34,7 @@
     <div class="people">
       <div class="box">
         <div class="names">
-          <img src="/img/xandre.jpg" />
+          <img src="../../img/xandre.jpg" />
           <h2>Alexandre Paquibot</h2>
         </div>
         <div class="elementsWithin1">
@@ -72,7 +72,7 @@
       </div>
       <div class="box">
         <div class="names">
-          <img src="/img/ayn.jpg" />
+          <img src="../../img/ayn.jpg" />
           <h2>Ayn Lorebelle Cavan</h2>
         </div>
         <div class="elementsWithin1">
@@ -109,7 +109,7 @@
       </div>
       <div class="box">
         <div class="names">
-          <img src="/img/David.jpg" />
+          <img src="../../img/David.jpg" />
           <h2>Jan David Capuyan</h2>
         </div>
         <div class="elementsWithin1">
@@ -148,7 +148,7 @@
       </div>
       <div class="box">
         <div class="names">
-          <img src="/img/erika.jpg" />
+          <img src="../../img/erika.jpg" />
           <h2>Erika Gabrielle Samson</h2>
         </div>
         <div class="elementsWithin1">
@@ -188,7 +188,7 @@
       </div>
       <div class="box">
         <div class="names">
-          <img src="/img/unknown.jpg" />
+          <img src="../../img/unknown.jpg" />
           <h2>Princess Abegeal Alegre</h2>
         </div>
         <div class="elementsWithin1">
