add prettier to main files

--- a/index.html
+++ b/index.html
@@ -65,8 +65,8 @@
           <div class="card-text">
             <h1>3D Modeling</h1>
             <p>
-              Elevate your concepts to the next dimension with our expert team of
-              3D artists. From intricate product designs to immersive
+              Elevate your concepts to the next dimension with our expert team
+              of 3D artists. From intricate product designs to immersive
               architectural renderings, Tesseract brings your visions to life in
               stunning detail.
             </p>
@@ -80,8 +80,8 @@
             <p>
               Dive into a world of possibilities as we harness the computational
               prowess of our advanced systems. Tesseract's simulation expertise
-              spans across industries, allowing you to test, refine, and optimize
-              your ideas with unparalleled precision.
+              spans across industries, allowing you to test, refine, and
+              optimize your ideas with unparalleled precision.
             </p>
             <button>Learn More</button>
           </div>
