change footer content

--- a/index.html
+++ b/index.html
@@ -138,8 +138,7 @@
     </section>
     <footer>
       <div class="fixed-width footer-text">
-        <p>Created by: Paquibot, Alexandre</p>
-        <p>December 11, 2022</p>
+        <p>Paquibot, Alexandre (2023)</p>
       </div>
     </footer>
   </body>
