--- a/pages/login/login.html
+++ b/pages/login/login.html
@@ -42,8 +42,7 @@
     </form>
     <footer>
       <div class="fixed-width footer-text">
-        <p>Created by: Cavan, Ayn Lorebelle</p>
-        <p>December 11, 2022</p>
+        <p>Cavan, Ayn Lorebelle (2023)</p>
       </div>
     </footer>
     <script src="../../js/login.js" type="text/javascript"></script>
