--- a/pages/profile/profile.html
+++ b/pages/profile/profile.html
@@ -224,8 +224,7 @@
     </div>
     <footer>
       <div class="fixed-width footer-text">
-        <p>Created by: Alegre, Princess Abegeal</p>
-        <p>December 11, 2022</p>
+        <p>Alegre, Princess Abegeal (2023)</p>
       </div>
     </footer>
   </body>
