--- a/pages/register/register.html
+++ b/pages/register/register.html
@@ -55,8 +55,7 @@
     <script src="../../js/register.js"></script>
     <footer>
       <div class="fixed-width footer-text">
-        <p>Created by: Samson, Erika Gabrielle</p>
-        <p>December 11, 2022</p>
+        <p>Samson, Erika Gabrielle (2023)</p>
       </div>
     </footer>
   </body>
