style display page

--- a/pages/feedback/display.html
+++ b/pages/feedback/display.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="../../css/navbar.css" />
     <link rel="stylesheet" href="../../css/styles.css" />
+    <link rel="stylesheet" href="../../css/display.css" />
     <link rel="stylesheet" href="../../css/footer.css" />
     <link
       rel="apple-touch-icon"
@@ -41,7 +42,8 @@
         </ul>
       </nav>
     </div>
-    <section id="posts"></section>
+    <h1 class="title">Feedback from Users!</h1>
+    <section class="fixed-width" id="posts"></section>
     <footer>
       <div class="fixed-width footer-text">
         <p>Alegre, Princess Abegeal (2023)</p>
