--- a/pages/feedback/display.html
+++ b/pages/feedback/display.html
@@ -47,7 +47,7 @@
     <section class="fixed-width" id="posts"></section>
     <footer>
       <div class="fixed-width footer-text">
-        <p>Alegre, Princess Abegeal (2023)</p>
+        <p>Capuyan J.D. & Paquibot A. (2023)</p>
       </div>
     </footer>
     <script src="../../js/display.js"></script>
