--- a/pages/feedback/feedback.html
+++ b/pages/feedback/feedback.html
@@ -78,8 +78,7 @@
     </div>
     <footer>
       <div class="fixed-width footer-text">
-        <p>Created by: Capuyan, Jan David</p>
-        <p>December 11, 2022</p>
+        <p>Capuyan, Jan David (2023)</p>
       </div>
     </footer>
     <script src="../../js/feedback.js"></script>
