add one post in display page
for it not be empty when opened

--- a/pages/feedback/display.html
+++ b/pages/feedback/display.html
@@ -24,7 +24,7 @@
       sizes="16x16"
       href="../../favicon-16x16.png"
     />
-    <link rel="shortcut icon" href="../../favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="../../favicon.ico" type="image/x-icon" />
     <link rel="manifest" href="../../site.webmanifest" />
     <title>Feedback Posts</title>
   </head>
@@ -44,7 +44,15 @@
       </nav>
     </div>
     <h1 class="title">Feedback from Users!</h1>
-    <section class="fixed-width" id="posts"></section>
+    <section class="fixed-width" id="posts">
+      <article class="user-post">
+        <div class="user-details">
+          <h1 class="user-id">12345789</h1>
+          <span class="user-email">(admin@auc.com)</span>
+        </div>
+        <p class="user-feedback">❝Goodbye, Mars!❞</p>
+      </article>
+    </section>
     <footer>
       <div class="fixed-width footer-text">
         <p>Capuyan J.D. & Paquibot A. (2023)</p>
